--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,3 @@
-
-
 body{
     margin: 0;
     /* background-image: url(https://i.pinimg.com/564x/c7/28/42/c7284261121802d6980538bb78ce2a0b.jpg);
@@ -34,13 +32,15 @@ header{
     box-shadow: 10px 25px 100px black;
 }
 
+.player-stats{
+    display: none;
+}
+
 #form{
     display: flex;
     flex-direction: column;
     width: 320px;
 }
-
-
 
 .inputs{
     display: flex;
@@ -48,6 +48,7 @@ header{
 }
 
 #form input{
+    display: block;
     margin: 10px 5px;
 }
 
@@ -56,8 +57,7 @@ header{
 }
 
 .button-reset{
-    margin: auto 0 auto -150px;
-    position: fixed;
+    margin: auto 0 auto 2px;
 }
 
 .button{
